--- a/src/components/counter/styles/style2.scss
+++ b/src/components/counter/styles/style2.scss
@@ -1,3 +1,4 @@
-.test-style-2 {
-	color: white;
+[data-counter-state][data-counter-state="even"] {
+	color: #0057B7;
+	background-color: #FFDD00;
 }
