Docs (Comments): Add docs comments to all the src subdirectories main files

--- a/src/components/counter/index.scss
+++ b/src/components/counter/index.scss
@@ -1,3 +1,9 @@
+/**
+ * This is a component styles file. It MUST be imported in the component script file.
+ * You may white styles here, but also may use styles subdirectory to create smaller chunks and then import them there.
+ * */
+
+
 @import "./styles/style1.scss";
 @import "./styles/style2.scss";
 
