--- a/src/main.scss
+++ b/src/main.scss
@@ -1,3 +1,9 @@
+/**
+ * This is the global styles file. It MUST be imported in main.js.
+ * Do not white styles here, use _styles directory instead.
+ * */
+
+
 @import "./_styles/utilities/variables.scss";
 @import "./_styles/utilities/functions.scss";
 @import "./_styles/utilities/mixins.scss";
