Feature (Global): Add base styles and scripts

--- a/src/_styles/base/accessibility.scss
+++ b/src/_styles/base/accessibility.scss
@@ -4,6 +4,6 @@
 	transition: var(--transition-default);
 }
 
-a, button, label, input {
-	cursor: pointer;
+.visually-hidden {
+	@include visually-hidden;
 }
