--- a/src/_styles/utilities/mixins.scss
+++ b/src/_styles/utilities/mixins.scss
@@ -1,1 +1,52 @@
+@forward 'sass-mq/_mq.scss' with (
+	$breakpoints: (
+		'mobile-sm': 340px,
+		'mobile-md': 480px,
+		'tablet-sm': 768px,
+		'tablet-md': 992px,
+		'desktop-sm': 1280px,
+		'desktop-md': 1440px,
+		'desktop-lg': 1920px,
+	)
+);
 
+@mixin autofill($background-color, $border: null) {
+	&:autofill {
+		background-color: $background-color;
+		@if $border != null {
+			border: $border;
+		}
+	}
+	&:-webkit-autofill {
+		box-shadow: inset 0 100vmax $background-color;
+		@if $border != null {
+			border: $border;
+		}
+	}
+}
+
+@mixin line-clamp($lines-number: 3) {
+	display: -webkit-box;
+	-webkit-line-clamp: $lines-number;
+	-webkit-box-orient: vertical;
+	overflow: hidden;
+}
+
+@mixin visually-hidden() {
+	position: absolute !important;
+	width: 1px !important;
+	height: 1px !important;
+	padding: 0 !important;
+	margin: -1px !important; // Fix for https://github.com/twbs/bootstrap/issues/25686
+	overflow: hidden !important;
+	clip: rect(0, 0, 0, 0) !important;
+	white-space: nowrap !important;
+	border: 0 !important;
+}
+
+// Useful for "Skip to main content" links; see https://www.w3.org/TR/2013/NOTE-WCAG20-TECHS-20130905/G1
+@mixin visually-hidden-focusable() {
+	&:not(:focus):not(:focus-within) {
+		@include visually-hidden();
+	}
+}
