Feature (Stylelint): Initialize stylelint

--- a/src/_styles/base/accessibility.scss
+++ b/src/_styles/base/accessibility.scss
@@ -1,6 +1,6 @@
 :focus-visible {
 	outline: currentColor solid 1px;
-	outline-offset: .25em;
+	outline-offset: 0.25em;
 	transition: var(--transition-default);
 }
 
