--- a/src/_styles/components/webflow/rich-text.scss
+++ b/src/_styles/components/webflow/rich-text.scss
@@ -4,11 +4,11 @@
 		overflow: visible;
 	}
 
-	& > :first-child {
-		margin-top: 0;
+	> :first-child {
+		margin-block-start: 0;
 	}
 
-	& > :last-child {
-		margin-bottom: 0;
+	> :last-child {
+		margin-block-end: 0;
 	}
 }
