--- a/src/_styles/utilities/mixins.scss
+++ b/src/_styles/utilities/mixins.scss
@@ -1,25 +1,26 @@
-@forward 'sass-mq/_mq.scss' with (
+@forward "sass-mq/_mq.scss" with (
 	$breakpoints: (
-		'mobile-sm': 340px,
-		'mobile-md': 480px,
-		'tablet-sm': 768px,
-		'tablet-md': 992px,
-		'desktop-sm': 1280px,
-		'desktop-md': 1440px,
-		'desktop-lg': 1920px,
+		"mobile-sm": 340px,
+		"mobile-md": 480px,
+		"tablet-sm": 768px,
+		"tablet-md": 992px,
+		"desktop-sm": 1280px,
+		"desktop-md": 1440px,
+		"desktop-lg": 1920px,
 	)
 );
 
 @mixin autofill($background-color, $border: null) {
 	&:autofill {
 		background-color: $background-color;
-		@if $border != null {
+		@if $border {
 			border: $border;
 		}
 	}
+
 	&:-webkit-autofill {
 		box-shadow: inset 0 100vmax $background-color;
-		@if $border != null {
+		@if $border {
 			border: $border;
 		}
 	}
@@ -27,21 +28,21 @@
 
 @mixin line-clamp($lines-number: 3) {
 	display: -webkit-box;
-	-webkit-line-clamp: $lines-number;
-	-webkit-box-orient: vertical;
 	overflow: hidden;
+	-webkit-box-orient: vertical;
+	-webkit-line-clamp: $lines-number;
 }
 
 @mixin visually-hidden() {
 	position: absolute !important;
-	width: 1px !important;
-	height: 1px !important;
-	padding: 0 !important;
-	margin: -1px !important; // Fix for https://github.com/twbs/bootstrap/issues/25686
 	overflow: hidden !important;
-	clip: rect(0, 0, 0, 0) !important;
-	white-space: nowrap !important;
+	padding: 0 !important;
 	border: 0 !important;
+	margin: -1px !important; // Fix for https://github.com/twbs/bootstrap/issues/25686
+	block-size: 1px !important;
+	clip: rect(0, 0, 0, 0) !important;
+	inline-size: 1px !important;
+	white-space: nowrap !important;
 }
 
 // Useful for "Skip to main content" links; see https://www.w3.org/TR/2013/NOTE-WCAG20-TECHS-20130905/G1
