--- a/src/components/counter/index.scss
+++ b/src/components/counter/index.scss
@@ -12,42 +12,50 @@
 
 
 [data-component-id="counter"] {
+	.heading {
+		background: linear-gradient(hsla(163, 65%, 41%, 0.3), hsl(156, 100%, 25%));
+		-webkit-background-clip: text;
+		font-size: 72px;
+		-webkit-text-fill-color: transparent;
+	}
+
 	.input {
-		@include autofill(white, 1px solid currentColor)
+		@include autofill(white, 1px solid currentColor);
 	}
 	.input-2 {
-		@include autofill(red)
+		@include autofill(red);
 	}
 
 	.container {
 		position: relative;
+
 		&::before {
-			content: "default breakpoint";
 			position: absolute;
+			content: "default breakpoint";
 			inset-block-start: 0;
 			inset-inline-end: var(--container-padding);
 
 			@include mq($from: mobile-sm) {
-				content: "mobile-sm and higher"
+				content: "mobile-sm and higher";
 			}
 
 			@include mq($from: tablet-sm, $until: desktop-sm) {
-				content: "from tablet-sm up to desktop-sm"
+				content: "from tablet-sm up to desktop-sm";
 			}
 		}
 	}
 
 	[data-counter-state] {
-		background-color: var(--color-background-primary);
 		border: currentColor 2px solid;
+		background-color: var(--color-background-primary);
 
 		&[data-counter-state="odd"] {
 			color: var(--color-accent-1);
 		}
 
 		&[data-counter-state="even"] {
-			color: var(--color-accent-3);
 			background-color: var(--color-accent-2);
+			color: var(--color-accent-3);
 		}
 	}
 }
