--- a/src/components/scroll-control-panel/index.scss
+++ b/src/components/scroll-control-panel/index.scss
@@ -1,5 +1,5 @@
 [data-component-id="scroll-control-panel"] {
 	.w-button:not(:last-child) {
-		margin-inline-end: .5em;
+		margin-inline-end: 0.5em;
 	}
 }
