--- a/src/components/swiper-1/index.scss
+++ b/src/components/swiper-1/index.scss
@@ -1,15 +1,15 @@
-@import 'swiper/scss';
-@import 'swiper/scss/navigation';
+@import "swiper/scss";
+@import "swiper/scss/navigation";
 
 
 [data-component-id="swiper-1"] {
 	--swiper-theme-color: var(--color-accent-1);
 
 	.swiper-slide {
-		padding: var(--padding-base) calc(var(--padding-base) * 2);
-		background-color: var(--color-background-primary);
-		border-radius: var(--radius-base);
-
 		border: 1px solid var(--color-outline-primary);
+		border-radius: var(--radius-base);
+		background-color: var(--color-background-primary);
+		padding-block: var(--padding-base);
+		padding-inline:	calc(var(--padding-base) * 2);
 	}
 }
