--- a/src/components/swiper-2/index.scss
+++ b/src/components/swiper-2/index.scss
@@ -1,15 +1,16 @@
-@import 'swiper/scss';
-@import 'swiper/scss/navigation';
-@import 'swiper/scss/pagination';
-@import 'swiper/scss/scrollbar';
+@import "swiper/scss";
+@import "swiper/scss/navigation";
+@import "swiper/scss/pagination";
+@import "swiper/scss/scrollbar";
 
 [data-component-id="swiper-2"] {
 	--swiper-theme-color: var(--color-accent-2);
 
 	.swiper-slide {
-		padding: var(--padding-base) calc(var(--padding-base) * 2);
-		background-color: var(--color-background-secondary);
 		border-radius: var(--radius-base);
+		background-color: var(--color-background-secondary);
+		padding-block: var(--padding-base);
+		padding-inline:	calc(var(--padding-base) * 2);
 	}
 }
 
