--- a/src/components/scroll-control-panel/index.scss
+++ b/src/components/scroll-control-panel/index.scss
@@ -1,4 +1,4 @@
-[data-component-id="scroll-control-panel"] {
+[data-component-id='scroll-control-panel'] {
 	.w-button:not(:last-child) {
 		margin-inline-end: 0.5em;
 	}
